Get rif of dummy errors, refactored examples

--- a/tools/send_client.html
+++ b/tools/send_client.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>C3 WebSocket Library</title>
+        <title>Wsoding WebSocket Library</title>
     </head>
     <body>
         <p>Start the <code>example_server</code> and send some text to it via this field:</p>
